--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "jsend": "^1.0.2",
     "mongoose": "^5.1.2",
     "serve-favicon": "^2.5.0",
+    "request": "^2.87.0",
+    "request-promise": "^4.2.2",
     "winston": "^2.4.2"
   },
   "devDependencies": {
